yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-learning-api-service
  namespace: development
spec:
  type: NodePort
  selector:
    app: k8s-learning-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080
